--- a/app/views/dm_items/new.html.erb
+++ b/app/views/dm_items/new.html.erb
@@ -1,7 +1,7 @@
 <%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
 
 <div class="dm_items new">
-  <h2>Create Digital Media Item</h2>
+  <h2>New Digital Media Item</h2>
 
   <%= form_for(:dm_item, :url => {:action => 'create'}) do |f| %>
 
