add form fields

--- a/app/views/dm_items/edit.html.erb
+++ b/app/views/dm_items/edit.html.erb
@@ -1,8 +1,4 @@
-<% if !flash[:notice].blank? %>
-  <div class="notice">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
+<% @page_title = "Edit" %>
 <%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
 
 <div class="dm_items edit">
@@ -10,48 +6,7 @@
 
   <%= form_for(:dm_item, :url => {:action => 'update', :id => @dm_item.id}) do |f| %>
 
-    <table summary="DmItem form fields">
-      <tr>
-        <th>ID</th>
-        <td><%= f.text_field(:auto_id) %></td>
-      </tr>
-      <tr>
-        <th>Format</th>
-        <td><%= f.text_field(:format) %></td>
-      </tr>
-      <tr>
-        <th>Transfer Status</th>
-        <td><%= f.text_field(:status) %></td>
-      </tr>
-      <tr>
-        <th>Method</th>
-        <td><%= f.text_field(:method) %></td>
-      </tr>
-      <tr>
-        <th>Transfer Date</th>
-        <td><%= f.date_field(:transfer_date) %></td>
-      </tr>
-      <tr>
-        <th>Disposition</th>
-        <td><%= f.text_field(:disposition) %></td>
-      </tr>
-      <tr>
-        <th>Notes</th>
-        <td><%= f.text_field(:notes) %></td>
-      </tr>
-      <tr>
-        <th>ArchivesSpace RefID</th>
-        <td><%= f.text_field(:refid) %></td>
-      </tr>
-      <tr>
-        <th>Parent Component</th>
-        <td><%= f.text_field(:display_title) %></td>
-      </tr>
-      <tr>
-        <th>Parent Resource</th>
-        <td><%= f.text_field(:resource) %></td>
-      </tr>
-    </table>
+    <%= render(:partial => "form", :locals => {:f => f}) %>
 
     <div class="form-buttons">
       <%= submit_tag("Update DmItem") %>
