--- a/app/views/dm_items/new.html.erb
+++ b/app/views/dm_items/new.html.erb
@@ -6,7 +6,7 @@
   <%= form_for(:dm_item, :url => {:action => 'create'}) do |f| %>
   <%= render(:partial => "form", :locals => {:f => f}) %>
     <div class="form-buttons">
-      <%= submit_tag("Create DmItem") %>
+      <%= submit_tag("Add Digital Media Item") %>
     </div>
 
   <% end %>
