--- a/app/views/dm_items/index.html.erb
+++ b/app/views/dm_items/index.html.erb
@@ -2,7 +2,7 @@
 <div class="dm_items index">
   <h2>Digital Media Items</h2>
 
-  <%= link_to("Add New DmItem", {:action => 'new'}, :class => 'action new') %>
+  <%= link_to("Add Digital Media Item", {:action => 'new'}, :class => 'action new') %>
 
   <div><%= pluralize(@dm_items.size, 'digital media item') %> found</div>
   <table class="listing" summary="Digital media item list">
@@ -12,7 +12,7 @@
       <th>Transfer Status</th>
       <th>Transfer Method</th>
       <th>Transfer Date</th>
-      <th>Dispositoin</th>
+      <th>Disposition</th>
       <th>Parent Component</th>
       <th>Parent Resource</th>
       <th>Actions</th>
@@ -29,9 +29,7 @@
 	  <td><%= dm_item.display_title %></td>
 	  <td><%= dm_item.resource %></td>
       <td class="actions">
-        <%= link_to("Show", {:action => 'show', :id => dm_item.id}, :class => 'action show') %>
         <%= link_to("Edit", {:action => 'edit', :id => dm_item.id}, :class => 'action edit') %>
-        <%= link_to("Delete", {:action => 'delete', :id => dm_item.id}, :class => 'action delete') %>
       </td>
     </tr>
     <% end %>
