--- a/app/views/dm_items/edit.html.erb
+++ b/app/views/dm_items/edit.html.erb
@@ -1,6 +1,7 @@
-<% @page_title = "Edit" %>
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
+<% @page_title = " | Update Item" %>
 
+<br/>
+<br/>
 <div class="dm_items edit">
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -15,4 +16,5 @@
     </div>
 
   <% end %>
+  <%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
 </div>
