--- a/app/views/dm_items/index.html.erb
+++ b/app/views/dm_items/index.html.erb
@@ -1,15 +1,13 @@
-<% @page_title = "Index" %>
+<% @page_title = " | Index" %>
+<br/>
+<br/>
 <div class="dm_items index">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h2 class="panel-title">Digital Media Items</h2>
   </div>
 
-  
-
   <div class="panel-body">
-	  
-  
   <table class="table table-striped" summary="Digital media item list">
     <tr class="header">
       <th>ID</th>
