--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -11,15 +11,13 @@
 
 <div class="form-group">
 	<%= f.label(:auto_id, "ID", class: "control-label") %>
-		<%= f.text_field(:auto_id, class: "form-control") %>
-
+	<%= f.text_field(:auto_id, class: "form-control") %>
 </div>
 
 <div class="form-group">
 	<%= f.label(:refid, "ArchivesSpace RefID", class: "control-label") %>
-	
-		<%= f.text_field(:refid, class: "form-control") %>
-	
+	<%= f.text_field(:refid, class: "form-control") %>
+	<button type="button" class="btn btn-default">Find in ArchivesSpace</button>
 </div>
 
 <div class="form-group">
