--- a/app/views/dm_items/edit.html.erb
+++ b/app/views/dm_items/edit.html.erb
@@ -9,7 +9,7 @@
     <%= render(:partial => "form", :locals => {:f => f}) %>
 
     <div class="form-buttons">
-      <%= submit_tag("Update", :class => "btn btn-default") %>
+      <%= submit_tag("Update", :id => "btn-submit", :class => "btn btn-default") %>
     </div>
 
   <% end %>
