--- a/app/views/dm_items/new.html.erb
+++ b/app/views/dm_items/new.html.erb
@@ -11,7 +11,7 @@
 
   <%= render(:partial => "form", :locals => {:f => f}) %>
     <div class="form-buttons">
-      <%= submit_tag("Add Digital Media Item") %>
+      <%= submit_tag("Add Digital Media Item", :class => "btn btn-default") %>
     </div>
 
   <% end %>
