--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -17,7 +17,7 @@
 <div class="form-group">
 	<%= f.label(:refid, "ArchivesSpace RefID", class: "control-label") %>
 	<%= f.text_field(:refid, class: "form-control") %>
-	<button type="button" class="btn btn-default">Find in ArchivesSpace</button>
+	<button type="button" class="btn btn-default" id="find_in_as">Find in ArchivesSpace</button>
 </div>
 
 <div class="form-group">
@@ -66,3 +66,5 @@
 	<%= f.label(:notes) %>
 	<%= f.text_area(:notes, :size => "40x5") %>
 </div>    
+
+<%= submit_tag("Submit", :class => "btn btn-default") %>
