remove notes field

--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -62,9 +62,9 @@
 <%= f.select(:disposition, ["Retain", "Destroy"]) %>
 </div>
 
-<div class="form-group"> 
+<!-- ><div class="form-group"> 
 	<%= f.label(:notes) %>
 	<%= f.text_area(:notes, :size => "40x5") %>
-</div>    
+</div> -->   
 
 <%= submit_tag("Submit", :class => "btn btn-default") %>
