--- a/app/views/dm_items/new.html.erb
+++ b/app/views/dm_items/new.html.erb
@@ -2,10 +2,7 @@
 <br/>
 <br/>
 <div class="dm_items new">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h2 class="panel-title">Update Digital Media Item</h2>
-  </div>
+      <h2 class="panel-title">Add Digital Media Item</h2>
 
   <%= form_for(:dm_item, :url => {:action => 'create'}) do |f| %>
 
