--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
 	  <header>
+	        <%= render 'layouts/navigation' %>
 	  </header>
       <div id="main">
         <% if !flash[:notice].blank? %>
