--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-inner navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to 'MediaLog Index', root_path, class: 'navbar-brand' %>
+      <%= link_to 'Index', root_path, class: 'navbar-brand' %>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
