add session controller

--- a/app/views/dm_items/_form.html.erb
+++ b/app/views/dm_items/_form.html.erb
@@ -69,5 +69,7 @@
 </div> -->   
 
 <%= submit_tag("Submit", :class => "btn btn-primary", :id => "submit-button") %>
+<%= link_to("Save and add new", :action => "new", :class => "btn btn-primary") %>
+<%= link_to("Index", dm_items_path, :class => 'btn btn-primary') %>
 
 <% end %>
