--- a/app/views/dm_items/edit.html.erb
+++ b/app/views/dm_items/edit.html.erb
@@ -6,4 +6,6 @@
       <h2>Update Digital Media Item</h2>
 
     <%= render(:partial => "form") %>
+	<p>Created: <%= @dm_item.created_at.strftime("%x %X") %></p>
+	<p>Last updated: <%= @dm_item.updated_at.strftime("%x %X") %></p>
 </div>
